@@ -1,3 +1,8 @@
+2011-07-09 Philipp Klaus Krause <pkk@spth.de>
+
+	* src/SDCCast.c:
+	  Fixed bug #3107180.
+
 2011-06-29 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>
 
 	* src/z80/peeph-z80.def:
